# homunculus

./: Cargo.toml  README.md  solid.muon  test.glb  tree.muon
hom/: Cargo.toml  README.md  tree.muon
hom/assets/: branch.hom  person.hom  solid.hom  test.hom  tree.hom  worm.hom
hom/src/: cube.rs  main.rs  mesh.rs  model.rs  view.rs
homunculus/: Cargo.toml  README.md
homunculus/examples/: pyramid.rs  tree.rs
homunculus/src/: cube.rs  error.rs  gltf.rs  husk.rs  lib.rs  mesh.rs  model.rs  plane.rs  ring.rs  solid.rs
src/: cube.rs  geom.rs  glb.rs  gltf.rs  main.rs  mesh.rs  scene.rs  solid.rs
