[package]
name = "hom"
version = "0.1.0"
description = "Experimental 3D modeling program"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/homunculus/tree/main/hom"
readme = "README.md"
keywords = ["3D", "modeling", "gltf"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
homunculus = "0.1"
muon-rs = "0.2"
