[package]
name = "hom"
description = "3D modeling program/viewer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/homunculus/tree/main/hom"
readme = "README.md"
keywords = ["3D", "modeling", "gltf", "bevy"]
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
argh = "0.1"
bevy = "0.12"
glam = { workspace = true }
homunculus = { path = "../homunculus" }
muon-rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
