[package]
name = "homunculus"
version = "0.1.0"
description = "Experimental 3D modeling library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/homunculus/homunculus"
readme = "README.md"
keywords = ["3D", "modeling", "gltf"]
edition = "2021"

[dependencies]
glam = { version = "0.20", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
