[package]
name = "homunculus"
description = "Experimental 3D modeling library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/homunculus/tree/main/homunculus"
readme = "README.md"
keywords = ["3D", "modeling", "gltf", "bevy"]
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1"

[dev-dependencies]
muon-rs = "0.2"
