[package]
name = "homunculus"
description = "3D modeling library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/homunculus/tree/main/homunculus"
readme = "README.md"
keywords = ["3D", "modeling", "gltf"]
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
fastrand = "2"
